tests/baselines/reference/genericAssignmentCompatWithInterfaces1.errors.txt
tests/cases/compiler/genericAssignmentCompatWithInterfaces1.ts(12,5): error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
  Types of property 'x' are incompatible.
    Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
      Types of property 'compareTo' are incompatible.
        Type '(other: 数字) => 数字' is not assignable to type '(other: 文字) => 数字'.
          Types of parameters 'other' and 'other' are incompatible.
            Type '文字' is not assignable to type '数字'.
tests/cases/compiler/genericAssignmentCompatWithInterfaces1.ts(13,5): error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
  Types of property 'x' are incompatible.
    Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
tests/cases/compiler/genericAssignmentCompatWithInterfaces1.ts(16,5): error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
  Types of property 'x' are incompatible.
    Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
tests/cases/compiler/genericAssignmentCompatWithInterfaces1.ts(17,5): error TS2322: Type 'K<数字>' is not assignable to type 'I<文字>'.
  Types of property 'x' are incompatible.
    Type 'A<数字>' is not assignable to type 'Comparable<文字>'.


==== tests/cases/compiler/genericAssignmentCompatWithInterfaces1.ts (4 errors) ====
    interface Comparable<T> {
       compareTo(other: T): number;
    }
    interface I<T> {
        x: Comparable<T>;
    }
    interface K<T> {
       x: A<T>;
    }
    class A<T> implements Comparable<T> { compareTo(other: T) { return 1; } }
    var z = { x: new A<number>() };
    var a1: I<string> = { x: new A<number>() };
        ~~
!!! error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
!!! error TS2322:       Types of property 'compareTo' are incompatible.
!!! error TS2322:         Type '(other: 数字) => 数字' is not assignable to type '(other: 文字) => 数字'.
!!! error TS2322:           Types of parameters 'other' and 'other' are incompatible.
!!! error TS2322:             Type '文字' is not assignable to type '数字'.
    var a2: I<string> = function (): { x: A<number> } {
        ~~
!!! error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
       var z = { x: new A<number>() }; return z;
    } ();
    var a3: I<string> = z;
        ~~
!!! error TS2322: Type '{ x: A<数字>; }' is not assignable to type 'I<文字>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
    var a4: I<string> = <K<number>>z;
        ~~
!!! error TS2322: Type 'K<数字>' is not assignable to type 'I<文字>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'A<数字>' is not assignable to type 'Comparable<文字>'.
     
    